Make adjustments based on the latest Project Panama changes